--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/dp_size_16"
-        android:background="@color/yellow"
-        android:orientation="vertical"
-        tools:ignore="UselessParent">
+    <TextView
+        android:id="@+id/counter_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/dp_size_50"
+        android:gravity="center"
+        android:textSize="@dimen/sp_size_100"
+        tools:text="0" />
 
-        <Button
-            android:id="@+id/say_hello_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/say_hello_string" />
+    <Button
+        android:id="@+id/count_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/count_string" />
 
-        <TextView
-            android:id="@+id/counter_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_gravity="center"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:textColor="?attr/colorPrimary"
-            android:textSize="@dimen/sp_size_180"
-            android:textStyle="bold"
-            tools:text="0" />
+    <EditText
+        android:id="@+id/edit_text"
+        android:layout_width="@dimen/dp_size_160"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 
-        <Button
-            android:id="@+id/count_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/count_string" />
-
-    </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
