--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,31 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/counter_text_view"
+    <ImageView
+        android:id="@+id/photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/dp_size_50"
-        android:gravity="center"
-        android:textSize="@dimen/sp_size_100"
-        tools:text="0" />
+        tools:src="@tools:sample/avatars" />
 
     <Button
-        android:id="@+id/count_button"
+        android:id="@+id/take_photo_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/count_string" />
-
-    <EditText
-        android:id="@+id/edit_text"
-        android:layout_width="@dimen/dp_size_160"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:text="@string/take_photo" />
 
 </LinearLayout>
